Docstring adicionado!
