# models/colaborador.py
@@ -1,6 +1,16 @@
 from sql_alchemy import bd
 
 class ColaboradorModel(bd.Model):
+    '''Classe Modelo que recebe o banco de dados e organiza a manipulação dos dados.
+    
+    Classe com os seguintes métodos de classe:
+    - encontrar_colaborador(cls, matricula)
+    Classe com os seguintes métodos:
+    - salvar_colaborador(self)
+    - atualizar_colaborador(self, nome, sobrenome, cargo, codigo_cargo, lider, matricula_lider, salario, senha, status_colaborador)
+    - deletar_colaborador(self)
+    - json(self)
+    '''
     __tablename__ = "public.colaboradores"
 
     matricula = bd.Column(bd.String, primary_key = True)
@@ -26,30 +36,26 @@ class ColaboradorModel(bd.Model):
         self.senha = senha
         self.status_colaborador = status_colaborador
 
-    def json(self):
-        return {"matricula" : self.matricula,
-            "nome" : self.nome,
-            "sobrenome" : self.sobrenome,
-            "cargo" : self.cargo,
-            "codigo_cargo" : self.codigo_cargo,
-            "lider" : self.lider,
-            "matricula_lider" : self.matricula_lider,
-            "salario" : self.salario,
-            "senha" : self.senha,
-            "status_colaborador" : self.status_colaborador}
-
     @classmethod
     def encontrar_colaborador(cls, matricula):
+        '''
+        Método de classe que filtra o banco de acordo com a matricula de entrada para saber se a matricula já existe
+
+        Se a matricula não existe, a função retorna None
+        Se a matricula já existe, a função retorna o objeto colaborador
+        '''   
         colaborador = cls.query.filter_by(matricula=matricula).first() # SELECT * FROM colaboradores WHERE matricula = matricula
         if colaborador:
             return colaborador
         return None
 
-    def save_colaborador(self):
+    def salvar_colaborador(self):
+        '''Método que salva o colaborador no banco de dados'''   
         bd.session.add(self)
         bd.session.commit()
 
-    def update_colaborador(self, nome, sobrenome, cargo, codigo_cargo, lider, matricula_lider, salario, senha, status_colaborador):
+    def atualizar_colaborador(self, nome, sobrenome, cargo, codigo_cargo, lider, matricula_lider, salario, senha, status_colaborador):
+        '''Método que atualiza os dados do colaborador sem apagar os dados atuais que não foram atualizados nessa requisição'''   
         if not nome == None:
             self.nome = nome
         if not sobrenome == None:    
@@ -69,6 +75,20 @@ class ColaboradorModel(bd.Model):
         if not status_colaborador == None:
             self.status_colaborador = status_colaborador
 
-    def delete_colaborador(self):
+    def deletar_colaborador(self):
+        '''Método que deleta o colaborador do banco de dados'''   
         bd.session.delete(self)
         bd.session.commit()
+
+    def json(self):
+        '''Método que organiza os dados de entrada em formato JSON'''
+        return {"matricula" : self.matricula,
+            "nome" : self.nome,
+            "sobrenome" : self.sobrenome,
+            "cargo" : self.cargo,
+            "codigo_cargo" : self.codigo_cargo,
+            "lider" : self.lider,
+            "matricula_lider" : self.matricula_lider,
+            "salario" : self.salario,
+            "senha" : self.senha,
+            "status_colaborador" : self.status_colaborador}
